=== DRomics : Dose response for omics ===

Version 2.4-0 
=======================
NEW FEATURES
- Add of an argument (preventsfitsoutofrange) by default at TRUE in drcfit() to prevent fits of biphasic models giving an extreme value out of the range of the observed signal, that could happen in rare cases.

Version 2.3-0 
=======================
NEW FEATURES
- An argument facetby2 was added to bmdplotwithgradient()
and to curvesplot() to be able
to split those plots in rows AND columns using facet_grid().
- Add of the function trendplot() to plot the repartition of dose-response
trend per group of items.
- Add of the function sensitivityplot() to plot various summaries of BMD
values per group of items.
- Add of the function bmdplot() that takes extendedres as a first argument as
trendplot(), bmdplotwithgradient(), sensitivityplot() and curvesplot().
- Removing of the drcfit() argument sigmoid.model that was confusing for some users and not useful for a common use of the package.

Version 2.2-0 
=============
NEW FEATURES
- The second-order Akaike criterion (AICc) recommended to prevent overfitting
with small number of data poinst in each dose-response crives was implemented
and defined as the default option for the argument information.criterion in drcfit().
- The example file of the package (?DRomics) was replaced by a vignette to help
the use of the package and of the Shiny application.
- Improvement of the computation of low BMD values for designs with a high
ratio between the maximal and minimal (non null) tested doses, with the add
of two arguments to bmdcalc, minBMD and ratio2switchinlog.
- Add of two columns in the output of bmdcalc (BMR.zSD and BMR.xfold)
- Add of a function plotfit2pdf() to plot all fits (or residual plots)
in a pdf file, using the raw scale or the log scale of the dose and 
removing of the option saveplot2pdf of drcfit().
- Replacement of the class 'metabolomicdata' by the class 'continuousomicdata'