@@ -20,7 +20,7 @@ and for dose-reponse modelling.
 }
 
 \usage{
-continuousanchoringdata(file, check = TRUE)
+continuousanchoringdata(file, backgrounddose, check = TRUE)
 
 \method{print}{continuousanchoringdata}(x, \dots)
 \method{plot}{continuousanchoringdata}(x, \dots)
@@ -41,6 +41,8 @@ Alternatively an R object of class \code{data.frame} can be directly given in in
 corresponding to the output
 of \code{read.table(file, header = FALSE)} on a file described as above. The two
 alternatives are illustrated below in examples.}
+
+\item{backgrounddose}{This argument must be used when there is no dose at zero in the data, to prevent the calculation of the BMD by extrapolation. All doses below the value given in backgrounddose will be fixed at 0, so as to be considered at the background level of exposition.}
 
 \item{check}{If TRUE the format of the input file is checked.}
 
@@ -98,7 +100,10 @@ Marie-Laure Delignette-Muller
 #
 datafilename <- system.file("extdata", "apical_anchoring.txt", package = "DRomics")
 
-o <- continuousanchoringdata(datafilename, check = TRUE)
+o <- continuousanchoringdata(datafilename, backgrounddose = 0.1, check = TRUE)
+# It is here necessary to define the background dose as there is no dose at 0 in the data
+# The BMD cannot be computed without defining the background level
+
 print(o)
 \donttest{
 plot(o)
@@ -115,7 +120,7 @@ plot(o)
 # Use of an R object of class data.frame
 # on the same example (see ?Scenedesmus for details)
 data(Scenedesmus_apical)
-o <- continuousanchoringdata(Scenedesmus_apical)
+o <- continuousanchoringdata(Scenedesmus_apical, backgrounddose = 0.1)
 print(o)
 \donttest{
 plot(o)
