@@ -17,10 +17,10 @@ normalization).
 }
 
 \usage{
-microarraydata(file, check = TRUE, 
+microarraydata(file, backgrounddose, check = TRUE, 
   norm.method = c("cyclicloess", "quantile", "scale", "none"))
   
-omicdata(file, check = TRUE, 
+omicdata(file, backgrounddose, check = TRUE, 
   norm.method = c("cyclicloess", "quantile", "scale", "none"))
 
 \method{print}{microarraydata}(x, \dots)
@@ -41,6 +41,10 @@ This file is imported within the function using the function
 Alternatively an R object of class \code{data.frame} can be directly given in input, 
 corresponding to the output
 of \code{read.table(file, header = FALSE)} on a file described as above. }
+
+
+\item{backgrounddose}{This argument must be used when there is no dose at zero in the data, to prevent the calculation of the BMD by extrapolation. All doses below the value given in backgrounddose will be fixed at 0, so as to be considered at the background level of exposition.}
+
 
 \item{check}{If TRUE the format of the input file is checked.}
 
